--- a/DvachBrowser3/project.json
+++ b/DvachBrowser3/project.json
@@ -1,14 +1,14 @@
 ﻿{
   "dependencies": {
-    "Microsoft.ApplicationInsights": "2.1.0",
+    "Microsoft.ApplicationInsights": "2.2.0",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "Microsoft.Toolkit.Uwp": "1.0.0",
-    "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
-    "Newtonsoft.Json": "9.0.1",
-    "Template10": "1.1.12-preview-160922",
-    "Win2D.uwp": "1.19.0",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.2",
+    "Microsoft.Toolkit.Uwp": "1.4.1",
+    "Microsoft.Xaml.Behaviors.Uwp.Managed": "2.0.0",
+    "Newtonsoft.Json": "10.0.2",
+    "Template10": "1.1.12",
+    "Win2D.uwp": "1.20.0",
     "XamlAnimatedGif": "1.1.6"
   },
   "frameworks": {
