Перенос файлов в папку

--- a/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
+++ b/DvachBrowser3.Ui.Common/DvachBrowser3.Ui.Common.csproj
@@ -110,32 +110,32 @@
     <Compile Include="CommonUiConsts.cs" />
     <Compile Include="DispatcherHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\DispatchedObjectBase.cs" />
-    <Compile Include="ViewModels\EmptyVisualState.cs" />
-    <Compile Include="ViewModels\IViewModel.cs" />
-    <Compile Include="ViewModels\IViewModelForegroundState.cs" />
-    <Compile Include="ViewModels\IViewModelOperation.cs" />
-    <Compile Include="ViewModels\IViewModelOperationsCollection.cs" />
-    <Compile Include="ViewModels\IViewModelOperationsScheduler.cs" />
-    <Compile Include="ViewModels\IViewModelPersistService.cs" />
-    <Compile Include="ViewModels\IViewModelLifetimeCallback.cs" />
-    <Compile Include="ViewModels\IViewModelPlaceholder.cs" />
-    <Compile Include="ViewModels\IViewModelPlaceholderModelSource.cs" />
-    <Compile Include="ViewModels\PersistentViewModelBase.cs" />
-    <Compile Include="ViewModels\PlaceholderViewModelSource.cs" />
-    <Compile Include="ViewModels\ViewModelBase.cs" />
-    <Compile Include="ViewModels\ViewModelEngineOperationWrapper.cs" />
-    <Compile Include="ViewModels\ViewModelOperationBase.cs" />
-    <Compile Include="ViewModels\ViewModelOperationProgress.cs" />
-    <Compile Include="ViewModels\ViewModelOperationProgressEventArgs.cs" />
-    <Compile Include="ViewModels\ViewModelOperationsCollection.cs" />
-    <Compile Include="ViewModels\ViewModelOperationState.cs" />
-    <Compile Include="ViewModels\ViewModelOperationStateChangedEventArgs.cs" />
-    <Compile Include="ViewModels\ViewModelPlaceholder.cs" />
-    <Compile Include="ViewModels\ViewModelState.cs" />
-    <Compile Include="ViewModels\ViewModelStateChangedEventArgs.cs" />
-    <Compile Include="ViewModels\ViewModelTaskFactoryOperationWrapper.cs" />
-    <Compile Include="ViewModels\VisualState.cs" />
+    <Compile Include="ViewModels\Common\DispatchedObjectBase.cs" />
+    <Compile Include="ViewModels\Common\EmptyVisualState.cs" />
+    <Compile Include="ViewModels\Common\IViewModel.cs" />
+    <Compile Include="ViewModels\Common\IViewModelForegroundState.cs" />
+    <Compile Include="ViewModels\Common\IViewModelOperation.cs" />
+    <Compile Include="ViewModels\Common\IViewModelOperationsCollection.cs" />
+    <Compile Include="ViewModels\Common\IViewModelOperationsScheduler.cs" />
+    <Compile Include="ViewModels\Common\IViewModelPersistService.cs" />
+    <Compile Include="ViewModels\Common\IViewModelLifetimeCallback.cs" />
+    <Compile Include="ViewModels\Common\IViewModelPlaceholder.cs" />
+    <Compile Include="ViewModels\Common\IViewModelPlaceholderModelSource.cs" />
+    <Compile Include="ViewModels\Common\PersistentViewModelBase.cs" />
+    <Compile Include="ViewModels\Common\PlaceholderViewModelSource.cs" />
+    <Compile Include="ViewModels\Common\ViewModelBase.cs" />
+    <Compile Include="ViewModels\Common\ViewModelEngineOperationWrapper.cs" />
+    <Compile Include="ViewModels\Common\ViewModelOperationBase.cs" />
+    <Compile Include="ViewModels\Common\ViewModelOperationProgress.cs" />
+    <Compile Include="ViewModels\Common\ViewModelOperationProgressEventArgs.cs" />
+    <Compile Include="ViewModels\Common\ViewModelOperationsCollection.cs" />
+    <Compile Include="ViewModels\Common\ViewModelOperationState.cs" />
+    <Compile Include="ViewModels\Common\ViewModelOperationStateChangedEventArgs.cs" />
+    <Compile Include="ViewModels\Common\ViewModelPlaceholder.cs" />
+    <Compile Include="ViewModels\Common\ViewModelState.cs" />
+    <Compile Include="ViewModels\Common\ViewModelStateChangedEventArgs.cs" />
+    <Compile Include="ViewModels\Common\ViewModelTaskFactoryOperationWrapper.cs" />
+    <Compile Include="ViewModels\Common\VisualState.cs" />
     <EmbeddedResource Include="Properties\DvachBrowser3.Ui.Common.rd.xml" />
   </ItemGroup>
   <ItemGroup>
